# X5-Crop

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  PROJECT_MEMORY.md  PROJECT_P_ROADMAP.md  README.md  README_X5_Crop_v1_1.md  README_X5_Split_v17.md  README_X5_Split_v18.md  README_X5_Split_v18_DoubleClick.md  RELEASE_NOTES_X5_Crop_v1_1.md  X5_Crop.py  X5_Crop_Mac.command  X5_Crop_Mac_120-645.command  X5_Crop_Mac_120-645_debug.command  X5_Crop_Mac_120-645_head.command  X5_Crop_Mac_120-645_head_debug.command  X5_Crop_Mac_120-66.command  X5_Crop_Mac_120-66_debug.command  X5_Crop_Mac_120-66_head.command  X5_Crop_Mac_120-66_head_debug.command  X5_Crop_Mac_120-67.command  X5_Crop_Mac_120-67_debug.command  X5_Crop_Mac_120-67_head.command  X5_Crop_Mac_120-67_head_debug.command  X5_Crop_Mac_135.command  X5_Crop_Mac_135_debug.command  X5_Crop_Mac_135_head.command  X5_Crop_Mac_135_head_debug.command  X5_Crop_Mac_debug.command  X5_Crop_Mac_diagnostics.command  X5_Crop_Mac_half.command  X5_Crop_Mac_half_debug.command  X5_Crop_Mac_half_head.command  X5_Crop_Mac_half_head_debug.command  X5_Crop_Mac_install.command  X5_Crop_Mac_partial.command  X5_Crop_Mac_partial_debug.command  (+54 more)
.githooks/: post-checkout  post-commit  post-merge  pre-commit  pre-push
X5_Crop_v1_1/: README_X5_Crop_v1_1.md  RELEASE_NOTES_X5_Crop_v1.md  requirements_X5_Crop_v1.txt
docs/: ARCHITECTURE.md  (+6 more)
native/: CMakeLists.txt  README.md
native/include/x5crop_native/: FilmstripWidget.h  InspectorPanel.h  MainWindow.h  ReviewCanvas.h  ScanModels.h
native/scripts/: build_macos.sh  build_windows.ps1
native/src/: FilmstripWidget.cpp  InspectorPanel.cpp  MainWindow.cpp  ReviewCanvas.cpp  ScanModels.cpp  main.cpp
(+975 files in other folders)
